spacing fix

--- a/src/app/shared/forms/planet-tag-input-dialog.scss
+++ b/src/app/shared/forms/planet-tag-input-dialog.scss
@@ -66,3 +66,11 @@
   word-wrap: break-word;
   overflow-wrap: anywhere;
 }
+
+.count {
+  white-space: nowrap;
+}
+
+.mat-action-list .count {
+  margin-left: 2px;
+}
